# xfa

./: AUTHORS  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
man/: Makefile.am  Makefile.in  mkpages.sh  xfa-lib.html  xfa.3  xfa.html  xfa.txt
src/: Makefile.am  Makefile.in  xfa-errors.h  xfa-include.h  xfa-lists.h  xfa-macros.h  xfa-phash.c  xfa-phash.h  xfa-pstack.c  xfa-pstack.h  xfa-re2nfa.c  xfa-re2nfa.h  xfa-system.h  xfa-util.c  xfa-util.h  xfa.c  xfa.h
test/: Makefile.am  Makefile.in  xfa-test.c
