dnl Process this file with autoconf to produce a configure script.
AC_INIT(xfa, 0.18)
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE(xfa, 0.18)
AM_CONFIG_HEADER(config.h)

CFLAGS=$(CFLAGS) -DUNIX
dnl Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdio.h limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_C_VOLATILE
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(memset memcmp memchr memcpy strlen)


AC_OUTPUT(Makefile src/Makefile test/Makefile man/Makefile)

